--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/router": "^16.0.0",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.2",
     "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.3",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.29",
