--- a/package.json
+++ b/package.json
@@ -25,9 +25,14 @@
     "@fontsource/roboto": "^5.0.2",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.3",
+    "@ng-bootstrap/ng-bootstrap": "^15.0.1",
+    "@popperjs/core": "^2.11.6",
+    "angular-bootstrap-md": "^4.3.2",
+    "bootstrap": "file:popperjs/core@ng-bootstrap/ng-bootstrap",
     "canvg": "^4.0.1",
     "file-saver": "^2.0.5",
     "html2canvas": "^1.4.1",
+    "jquery": "^3.7.0",
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.5.29",
     "ngx-cookie-service": "^16.0.0",
@@ -41,6 +46,7 @@
     "@angular-devkit/build-angular": "^16.0.0",
     "@angular/cli": "~16.0.0",
     "@angular/compiler-cli": "^16.0.0",
+    "@angular/localize": "^16.0.0",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~4.3.0",
     "jasmine-core": "~4.6.0",
